<resources>

    <string name="app_name">Compass</string>

    <string name="latitude_edit_text">Latitude</string>
    <string name="longitude_edit_text">Longitude</string>

    <string name="title_alert_dialog">Use Google\'s location service?</string>
    <string name="message_alert_dialog">Let the app determine location and point compassView to specific location.</string>
    <string name="negative_alert_dialog">DISMISS</string>
    <string name="positive_alert_dialog">AGREE</string>

    <string name="calibration_message">Wave the phone in a figure 8 motion to calibrate.</string>
    <string name="press_again_to_exit_toast">Press back again to exit.</string>

    <string name="point_north_title">Pointing to the North Pole</string>
    <string name="point_location_title">Pointing to location</string>
    <string name="compass_not_detected_title">There\'s no compassView in your device</string>

    <string name="touch_info_error_subtitle">Google\'s location services are off \n Touch HERE to learn more</string>
    <string name="info_text_subtitle">Type in coordinates of specific location which needle will point to</string>
    <string name="error_latitude_out_of_range">Should be between -90 and 90</string>
    <string name="error_longitude_out_of_range">Should be between -180 and 180</string>

    <string name="gps_provider">gps</string>
    <string name="network_provider">network</string>

    <string name="minus_sign">-</string>
    <string name="dot_sign">.</string>

    <string name="calibrate">Calibrate</string>
    <string name="compass_rose_image_description">Indicates the North Pole</string>
    <string name="compass_needle_image_description">Direction indicator</string>

    <string name="empty">""</string>

</resources>
