<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="mariuszbaleczny.compass.CompassFragment">

    <LinearLayout
        android:id="@+id/fragment_compass_titles_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/fragment_compass_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/point_north_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/fragment_compass_subtitle_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            android:paddingLeft="@dimen/compass_subtitle_side_padding"
            android:paddingRight="@dimen/compass_subtitle_side_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/subtitle_text_size"
            android:visibility="visible" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_compass_rose_needle_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="6">

        <ImageView
            android:id="@+id/fragment_compass_rose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/compass_rose_image_description"
            android:src="@drawable/compass_rose" />

        <ImageView
            android:id="@+id/fragment_compass_needle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/compass_needle_image_description"
            android:src="@drawable/compass_needle" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragment_compass_coordinates_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_compass_latitude_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|start">

            <mariuszbaleczny.compass.custom.CustomEditTextK
                android:id="@+id/fragment_compass_latitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|start"
                android:hint="@string/latitude_edit_text"
                android:imeOptions="actionDone"
                android:inputType="numberSigned|numberDecimal"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_size" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_compass_longitude_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|start">

            <mariuszbaleczny.compass.custom.CustomEditTextK
                android:id="@+id/fragment_compass_longitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|start"
                android:hint="@string/longitude_edit_text"
                android:imeOptions="actionDone"
                android:inputType="numberSigned|numberDecimal"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_size" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>